--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "typeRoots": ["./server/@types", "./node_modules/@types"]
   },
   "exclude": ["node_modules", "assets/**/*.js", "integration_tests", "dist", "esbuild", "eslint.config.mjs"],
-  "include": ["**/*.js", "**/*.ts"]
+  "include": ["**/*.ts"]
 }
