--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "connect-flash": "^0.1.1",
     "connect-redis": "^9.0.0",
     "csrf-sync": "^4.2.1",
+    "date-fns": "4.1.0",
     "express": "^5.2.1",
     "express-session": "^1.18.2",
     "govuk-frontend": "^5.14.0",
